configs/likeC4/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: likec4-ingress
  namespace: likec4
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: likec4-likec4-auth@kubernetescrd
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: "traefik"
  tls:
  - hosts:
    - likec4.kubehomelab.space
    secretName: likec4-cert
  rules:
  - host: likec4.kubehomelab.space
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: likec4-svc
            port:
              number: 80
